[RHPAM-2175] Remove controllerUser and executionUser/Add EXTERNAL_AUTH_ONLY
Signed-off-by: Ruben Romero Montes <rromerom@redhat.com>

--- a/deploy/crds/kieapp.crd.yaml
+++ b/deploy/crds/kieapp.crd.yaml
@@ -83,12 +83,6 @@ spec:
                     amqClusterPassword:
                       type: string
                       description: The password to use for amq cluster user.
-                    controllerPassword:
-                      type: string
-                      description: The password to use for the controllerUser.
-                    serverPassword:
-                      type: string
-                      description: The password to use for the executionUser.
                     mavenPassword:
                       type: string
                       description: The password to use for the mavenUser.
@@ -556,6 +550,9 @@ spec:
                   type: object
                   description: Authentication integration configuration
                   properties:
+                    externalOnly:
+                      type: boolean
+                      description: When true, only users defined in SSO/LDAP will be allowed. The default behaviour is to allow also application internal credentials.
                     sso:
                       type: object
                       description: RH-SSO integration configuration
@@ -767,12 +764,6 @@ spec:
                     amqClusterPassword:
                       type: string
                       description: The password to use for amq cluster user.
-                    controllerPassword:
-                      type: string
-                      description: The password to use for the controllerUser.
-                    serverPassword:
-                      type: string
-                      description: The password to use for the executionUser.
                     mavenPassword:
                       type: string
                       description: The password to use for the mavenUser.
