--- a/config/7.6.0/common.yaml
+++ b/config/7.6.0/common.yaml
@@ -85,13 +85,13 @@ console:
                   - name: KIE_MAVEN_PWD
                     value: "[[.MavenPassword]]"
                   - name: KIE_SERVER_CONTROLLER_USER
-                    value: controllerUser
+                    value: "[[.AdminUser]]"
                   - name: KIE_SERVER_CONTROLLER_PWD
-                    value: "[[.ControllerPassword]]"
+                    value: "[[.AdminPassword]]"
                   - name: KIE_SERVER_USER
-                    value: executionUser
+                    value: "[[.AdminUser]]"
                   - name: KIE_SERVER_PWD
-                    value: "[[.ServerPassword]]"
+                    value: "[[.AdminPassword]]"
                   - name: KIE_MBEANS
                     value: enabled
                   #[[if or .Console.GitHooks.MountPath .Console.GitHooks.From]]
@@ -125,6 +125,8 @@ console:
                   - name: OPENSHIFT_DNS_PING_SERVICE_PORT
                     value: "8888"
                   # Auth config BEGIN
+                  - name: EXTERNAL_AUTH_ONLY
+                    value: "[[.Auth.ExternalOnly]]"
                   ## SSO config BEGIN
                   #[[if .Auth.SSO.URL]]
                   - name: SSO_OPENIDCONNECT_DEPLOYMENTS
@@ -418,9 +420,9 @@ smartRouter:
                   - name: KIE_SERVER_ROUTER_TLS_KEYSTORE
                     value: "/etc/smartrouter-secret-volume/keystore.jks"
                   - name: KIE_SERVER_CONTROLLER_USER
-                    value: controllerUser
+                    value: "[[.AdminUser]]"
                   - name: KIE_SERVER_CONTROLLER_PWD
-                    value: "[[.ControllerPassword]]"
+                    value: "[[.AdminPassword]]"
                   - name: KIE_SERVER_CONTROLLER_SERVICE
                     value: "[[.ApplicationName]]-[[.Console.Name]]"
                   - name: KIE_SERVER_CONTROLLER_PROTOCOL
@@ -552,15 +554,15 @@ servers:
                     - name: KIE_SERVER_STARTUP_STRATEGY
                       value: "OpenShiftStartupStrategy"
                     - name: KIE_SERVER_USER
-                      value: executionUser
+                      value: "[[$.AdminUser]]"
                     - name: KIE_SERVER_PWD
-                      value: "[[$.ServerPassword]]"
+                      value: "[[$.AdminPassword]]"
                     - name: DROOLS_SERVER_FILTER_CLASSES
                       value: "true"
                     - name: KIE_SERVER_CONTROLLER_USER
-                      value: controllerUser
+                      value: "[[$.AdminUser]]"
                     - name: KIE_SERVER_CONTROLLER_PWD
-                      value: "[[$.ControllerPassword]]"
+                      value: "[[$.AdminPassword]]"
                     - name: KIE_SERVER_CONTROLLER_SERVICE
                       value: "[[$.ApplicationName]]-[[$.Console.Name]]"
                     - name: KIE_SERVER_CONTROLLER_PROTOCOL
@@ -606,6 +608,8 @@ servers:
                     - name: OPENSHIFT_DNS_PING_SERVICE_PORT
                       value: "8888"
                     # Auth config BEGIN
+                    - name: EXTERNAL_AUTH_ONLY
+                      value: "[[$.Auth.ExternalOnly]]"
                     ## SSO config BEGIN
                     #[[if $.Auth.SSO.URL]]
                     - name: SSO_OPENIDCONNECT_DEPLOYMENTS
