[RHPAM-2175] Restore controller and server passwords for backward compatibility
Signed-off-by: Ruben Romero Montes <rromerom@redhat.com>

--- a/deploy/crds/kieapp.crd.yaml
+++ b/deploy/crds/kieapp.crd.yaml
@@ -83,6 +83,12 @@ spec:
                     amqClusterPassword:
                       type: string
                       description: The password to use for amq cluster user.
+                    controllerPassword:
+                      type: string
+                      description: The password to use for the controllerUser.
+                    serverPassword:
+                      type: string
+                      description: The password to use for the executionUser.
                     mavenPassword:
                       type: string
                       description: The password to use for the mavenUser.
@@ -764,6 +770,12 @@ spec:
                     amqClusterPassword:
                       type: string
                       description: The password to use for amq cluster user.
+                    controllerPassword:
+                      type: string
+                      description: The password to use for the controllerUser.
+                    serverPassword:
+                      type: string
+                      description: The password to use for the executionUser.
                     mavenPassword:
                       type: string
                       description: The password to use for the mavenUser.
