--- a/config/7.8.0/dbs/postgresql.yaml
+++ b/config/7.8.0/dbs/postgresql.yaml
@@ -1,67 +1,15 @@
-## KIE Servers BEGIN
-servers:
+## KIE Databases BEGIN
+databases:
   ## RANGE BEGINS
-  #[[ range $index, $Map := .Servers ]]
-  ## KIE server deployment config BEGIN
+  #[[ range $index, $Map := .Databases ]]
   - deploymentConfigs:
-      - metadata:
-          name: "[[.KieName]]"
-        spec:
-          template:
-            spec:
-              initContainers:
-                - command:
-                    [
-                      "/bin/bash",
-                      "-c",
-                      ">-
-                       replicas=$(oc get dc [[.KieName]]-postgresql -o=jsonpath='{.status.availableReplicas}'); until '[' $replicas -gt 0 ']'; do echo waiting for [[.KieName]]-postgresql; replicas=$(oc get dc [[.KieName]]-postgresql -o=jsonpath='{.status.availableReplicas}'); sleep 2; done;",
-                    ]
-                  image: "[[$.Constants.OseCliImageURL]]"
-                  imagePullPolicy: IfNotPresent
-                  name: "[[.KieName]]-postgresql-init"
-                  terminationMessagePolicy: FallbackToLogsOnError
-              containers:
-                - name: "[[.KieName]]"
-                  env:
-                    ## PostgreSQL driver settings BEGIN
-                    - name: DATASOURCES
-                      value: "RHPAM"
-                    - name: RHPAM_DATABASE
-                      value: "rhpam7"
-                    - name: RHPAM_JNDI
-                      value: "java:/jboss/datasources/rhpam"
-                    - name: RHPAM_JTA
-                      value: "true"
-                    - name: KIE_SERVER_PERSISTENCE_DS
-                      value: "java:/jboss/datasources/rhpam"
-                    - name: RHPAM_DRIVER
-                      value: "postgresql"
-                    - name: KIE_SERVER_PERSISTENCE_DIALECT
-                      value: "org.hibernate.dialect.PostgreSQLDialect"
-                    - name: RHPAM_USERNAME
-                      value: "rhpam"
-                    - name: RHPAM_PASSWORD
-                      value: "[[$.DBPassword]]"
-                    - name: RHPAM_SERVICE_HOST
-                      value: "[[.KieName]]-postgresql"
-                    - name: RHPAM_SERVICE_PORT
-                      value: "5432"
-                    - name: RHPAM_CONNECTION_CHECKER
-                      value: "org.jboss.jca.adapters.jdbc.extensions.postgres.PostgreSQLValidConnectionChecker"
-                    - name: RHPAM_EXCEPTION_SORTER
-                      value: "org.jboss.jca.adapters.jdbc.extensions.postgres.PostgreSQLExceptionSorter"
-                    - name: TIMER_SERVICE_DATA_STORE_REFRESH_INTERVAL
-                      value: "30000"
-                    ## PostgreSQL driver settings END
-      ## KIE server deployment config END
       ## PostgreSQL deployment config BEGIN
       - metadata:
-          name: "[[.KieName]]-postgresql"
+          name: "[[.ServerName]]-postgresql"
           labels:
             app: "[[$.ApplicationName]]"
             application: "[[$.ApplicationName]]"
-            service: "[[.KieName]]-postgresql"
+            service: "[[.ServerName]]-postgresql"
         spec:
           strategy:
             type: Recreate
@@ -69,18 +17,18 @@ servers:
             - type: ConfigChange
           replicas: 1
           selector:
-            deploymentConfig: "[[.KieName]]-postgresql"
+            deploymentConfig: "[[.ServerName]]-postgresql"
           template:
             metadata:
-              name: "[[.KieName]]-postgresql"
+              name: "[[.ServerName]]-postgresql"
               labels:
-                deploymentConfig: "[[.KieName]]-postgresql"
+                deploymentConfig: "[[.ServerName]]-postgresql"
                 app: "[[$.ApplicationName]]"
                 application: "[[$.ApplicationName]]"
-                service: "[[.KieName]]-postgresql"
+                service: "[[.ServerName]]-postgresql"
             spec:
               containers:
-                - name: "[[.KieName]]-postgresql"
+                - name: "[[.ServerName]]-postgresql"
                   image: "[[$.Constants.PostgreSQLImageURL]]"
                   imagePullPolicy: IfNotPresent
                   livenessProbe:
@@ -101,43 +49,43 @@ servers:
                       protocol: TCP
                   env:
                     - name: POSTGRESQL_USER
-                      value: "rhpam"
+                      value: "[[.Username]]"
                     - name: POSTGRESQL_PASSWORD
                       value: "[[$.DBPassword]]"
                     - name: POSTGRESQL_DATABASE
-                      value: "rhpam7"
+                      value: "[[.DatabaseName]]"
                     - name: POSTGRESQL_MAX_PREPARED_TRANSACTIONS
                       value: "100"
                   volumeMounts:
                     - mountPath: "/var/lib/pgsql/data"
-                      name: "[[.KieName]]-postgresql-[[$.Constants.DatabaseVolumeSuffix]]"
-              ## [[ if ne .Database.Size "" ]]
+                      name: "[[.ServerName]]-postgresql-[[$.Constants.DatabaseVolumeSuffix]]"
+              ## [[ if ne .Size "" ]]
               volumes:
-                - name: "[[.KieName]]-postgresql-[[$.Constants.DatabaseVolumeSuffix]]"
+                - name: "[[.ServerName]]-postgresql-[[$.Constants.DatabaseVolumeSuffix]]"
                   persistentVolumeClaim:
-                    claimName: "[[.KieName]]-postgresql-claim"
+                    claimName: "[[.ServerName]]-postgresql-claim"
     ## PostgreSQL deployment config END
     ## PostgreSQL persistent volume claim BEGIN
     persistentVolumeClaims:
       - metadata:
-          name: "[[.KieName]]-postgresql-claim"
+          name: "[[.ServerName]]-postgresql-claim"
           labels:
             app: "[[$.ApplicationName]]"
             application: "[[$.ApplicationName]]"
-            service: "[[.KieName]]-postgresql"
+            service: "[[.ServerName]]-postgresql"
         spec:
-          # [[ if ne .Database.StorageClassName "" ]]
-          storageClassName: "[[.Database.StorageClassName]]"
+          # [[ if ne .StorageClassName "" ]]
+          storageClassName: "[[.StorageClassName]]"
           # [[ end ]]
           accessModes:
             - ReadWriteOnce
           resources:
             requests:
-              storage: "[[.Database.Size]]"
+              storage: "[[.Size]]"
               ## PostgreSQL persistent volume claim END
               ## [[ else ]]
               volumes:
-                - name: "[[.KieName]]-postgresql-[[$.Constants.DatabaseVolumeSuffix]]"
+                - name: "[[.ServerName]]-postgresql-[[$.Constants.DatabaseVolumeSuffix]]"
                   emptyDir: {}
     ## [[ end ]]
     services:
@@ -147,15 +95,15 @@ servers:
             description: The database server's port.
           labels:
             application: prod
-            service: "[[.KieName]]-postgresql"
-          name: "[[.KieName]]-postgresql"
+            service: "[[.ServerName]]-postgresql"
+          name: "[[.ServerName]]-postgresql"
         spec:
           ports:
             - port: 5432
               targetPort: 5432
           selector:
-            deploymentConfig: "[[.KieName]]-postgresql"
+            deploymentConfig: "[[.ServerName]]-postgresql"
     ## PostgreSQL service END
   #[[end]]
   ## RANGE ends
-  ## KIE Servers END
+## KIE Databases END
