--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -53,6 +53,8 @@ spec:
           value: registry.redhat.io/rhpam-7/rhpam-businesscentral-monitoring-rhel8:7.8.0
         - name: PAM_SMARTROUTER_IMAGE_7.8.0
           value: registry.redhat.io/rhpam-7/rhpam-smartrouter-rhel8:7.8.0
+        - name: PAM_PROCESS_MIGRATION_IMAGE_7.8.0
+          value: registry.redhat.io/rhpam-7/rhpam-process-migration-rhel8:7.8.0
         - name: OSE_CLI_IMAGE_7.8.0
           value: registry.redhat.io/openshift3/ose-cli:v3.11
         - name: MYSQL_PROXY_IMAGE_7.8.0
