[KIECLOUD-343] allow product to get routes
Signed-off-by: tchughesiv <tchughesiv@gmail.com>

--- a/config/7.6.0/common.yaml
+++ b/config/7.6.0/common.yaml
@@ -862,6 +862,19 @@ others:
               - patch
               - update
               - watch
+          - apiGroups:
+              - route.openshift.io
+            resources:
+              - routes
+            verbs:
+              - create
+              - delete
+              - deletecollection
+              - get
+              - list
+              - patch
+              - update
+              - watch
 
     serviceAccounts:
       - metadata:
