[KIECLOUD-343] allow product to get pods
Signed-off-by: tchughesiv <tchughesiv@gmail.com>

--- a/config/7.6.0/common.yaml
+++ b/config/7.6.0/common.yaml
@@ -840,6 +840,7 @@ others:
             resources:
               - configmaps
               - serviceaccounts
+              - pods
             verbs:
               - create
               - delete
