--- a/config/7.6.1/envs/rhdm-authoring-ha.yaml
+++ b/config/7.6.1/envs/rhdm-authoring-ha.yaml
@@ -54,19 +54,15 @@ others:
             service: "[[.ApplicationName]]-datagrid"
         spec:
           podManagementPolicy: OrderedReady
-          replicas: 1
+          updateStrategy:
+            rollingUpdate:
+              partition: 0
+            type: RollingUpdate
+          replicas: 2
           selector:
             matchLabels:
               deploymentConfig: "[[.ApplicationName]]-datagrid"
           serviceName: "[[.ApplicationName]]-datagrid"
-          strategy:
-            rollingParams:
-              intervalSeconds: 20
-              maxSurge: 1
-              maxUnavailable: 1
-              timeoutSeconds: 1200
-              updatePeriodSeconds: 20
-            type: Rolling
           template:
             metadata:
               labels:
@@ -151,6 +147,7 @@ others:
                 resources:
                   requests:
                     storage: 1Gi
+
       - metadata:
           annotations:
             alpha.image.policy.openshift.io/resolve-names: "*"
@@ -159,7 +156,11 @@ others:
             application: "[[.ApplicationName]]"
           name: "[[.ApplicationName]]-amq"
         spec:
-          podManagementPolicy: OrderedReady
+          podManagementPolicy:
+          updateStrategy:
+            rollingUpdate:
+              partition: 0
+            type: RollingUpdate
           replicas: 2
           revisionHistoryLimit: 10
           selector:
@@ -168,7 +169,6 @@ others:
           serviceName: "[[.ApplicationName]]-amq-tcp"
           template:
             metadata:
-              creationTimestamp: null
               labels:
                 app: "[[.ApplicationName]]"
                 application: "[[.ApplicationName]]"
@@ -252,11 +252,8 @@ others:
               schedulerName: default-scheduler
               securityContext: {}
               terminationGracePeriodSeconds: 60
-          updateStrategy:
-            type: OnDelete
           volumeClaimTemplates:
             - metadata:
-                creationTimestamp: null
                 name: "[[.ApplicationName]]-amq-pvol"
               spec:
                 accessModes:
@@ -331,5 +328,5 @@ others:
           annotations:
             description: Provides a service for accessing the application over Hot Rod protocol.
             service.alpha.openshift.io/serving-cert-secret-name: datagrid-service-certs
-## ES/AMQ END
+  ## ES/AMQ END
 
