--- a/deploy/catalog_resources/redhat/1.3.0/businessautomation-operator.1.3.0.clusterserviceversion.yaml
+++ b/deploy/catalog_resources/redhat/1.3.0/businessautomation-operator.1.3.0.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     categories: Integration & Delivery
     certified: "true"
     containerImage: registry.redhat.io/rhpam-7/rhpam-rhel8-operator:7.6.0
-    createdAt: "2019-11-06 16:25:19"
+    createdAt: "2019-12-04 13:33:08"
     description: Business Automation Operator for deployment and management of RHPAM/RHDM
       environments.
     repository: https://github.com/kiegroup/kie-cloud-operator
@@ -175,6 +175,8 @@ spec:
           - apps
           resources:
           - deployments
+          - deployments/finalizers
+          - replicasets
           - statefulsets
           verbs:
           - create
@@ -283,14 +285,6 @@ spec:
           - patch
           - update
           - watch
-        - apiGroups:
-          - apps
-          resourceNames:
-          - business-automation-operator
-          resources:
-          - deployments/finalizers
-          verbs:
-          - update
         serviceAccountName: business-automation-operator
     strategy: deployment
   installModes:
