--- a/deploy/catalog_resources/community/1.3.1/kiecloud-operator.1.3.1.clusterserviceversion.yaml
+++ b/deploy/catalog_resources/community/1.3.1/kiecloud-operator.1.3.1.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     categories: Integration & Delivery
     certified: "false"
     containerImage: quay.io/kiegroup/kie-cloud-operator:1.3.1
-    createdAt: "2019-12-02 15:03:14"
+    createdAt: "2019-12-04 13:36:42"
     description: Kie Cloud Operator for deployment and management of RHPAM/RHDM environments.
     repository: https://github.com/kiegroup/kie-cloud-operator
     support: Red Hat, Inc.
@@ -173,6 +173,8 @@ spec:
           - apps
           resources:
           - deployments
+          - deployments/finalizers
+          - replicasets
           - statefulsets
           verbs:
           - create
@@ -281,14 +283,6 @@ spec:
           - patch
           - update
           - watch
-        - apiGroups:
-          - apps
-          resourceNames:
-          - kie-cloud-operator
-          resources:
-          - deployments/finalizers
-          verbs:
-          - update
         serviceAccountName: kie-cloud-operator
     strategy: deployment
   installModes:
