use container-first go modules for OSBS
Signed-off-by: tchughesiv <tchughesiv@gmail.com>

--- a/image.yaml
+++ b/image.yaml
@@ -30,6 +30,11 @@ modules:
 osbs:
   configuration:
     container:
+      go:
+        modules:
+        - module: github.com/kiegroup/kie-cloud-operator
+          # Optional, only needed for source in 'rhpkg upload' lookaside cache:
+          archive: kie-cloud-operator.tar.gz
       compose:
           pulp_repos: true
       platforms:
