[RHPAM-2401-1] - QE review, db is not ba component
Signed-off-by: Filippe Spolti <fspolti@redhat.com>

--- a/config/7.6.0/dbs/postgresql.yaml
+++ b/config/7.6.0/dbs/postgresql.yaml
@@ -63,10 +63,7 @@ servers:
             service: "[[.KieName]]-postgresql"
         spec:
           strategy:
-            rollingParams:
-              maxSurge: 100%
-              maxUnavailable: 0
-            type: Rolling
+            type: Recreate
           triggers:
             - type: ImageChange
               imageChangeParams:
