[RHPAM-2602] fix for 1.3.1 as well
Signed-off-by: tchughesiv <tchughesiv@gmail.com>

--- a/config/7.6.1/common.yaml
+++ b/config/7.6.1/common.yaml
@@ -837,14 +837,45 @@ others:
         rules:
           - apiGroups:
               - ""
-              - app.kiegroup.org
+            resources:
+              - configmaps
+              - serviceaccounts
+              - pods
+            verbs:
+              - create
+              - delete
+              - deletecollection
+              - get
+              - list
+              - patch
+              - update
+              - watch
+          - apiGroups:
               - apps.openshift.io
-              - image.openshift.io
+            resources:
+              - deploymentconfigs
+            verbs:
+              - create
+              - delete
+              - deletecollection
+              - get
+              - list
+              - patch
+              - update
+              - watch
+          - apiGroups:
               - route.openshift.io
             resources:
-              - "*"
+              - routes
             verbs:
-              - "*"
+              - create
+              - delete
+              - deletecollection
+              - get
+              - list
+              - patch
+              - update
+              - watch
 
     serviceAccounts:
       - metadata:
