--- a/deploy/catalog_resources/community/1.3.1/kiecloud-operator.1.3.1.clusterserviceversion.yaml
+++ b/deploy/catalog_resources/community/1.3.1/kiecloud-operator.1.3.1.clusterserviceversion.yaml
@@ -153,119 +153,17 @@ spec:
       - rules:
         - apiGroups:
           - ""
-          resources:
-          - configmaps
-          - pods
-          - services
-          - serviceaccounts
-          - persistentvolumeclaims
-          - secrets
-          verbs:
-          - create
-          - delete
-          - deletecollection
-          - get
-          - list
-          - patch
-          - update
-          - watch
-        - apiGroups:
           - apps
-          resources:
-          - deployments
-          - deployments/finalizers
-          - replicasets
-          - statefulsets
-          verbs:
-          - create
-          - delete
-          - deletecollection
-          - get
-          - list
-          - patch
-          - update
-          - watch
-        - apiGroups:
           - apps.openshift.io
-          resources:
-          - deploymentconfigs
-          verbs:
-          - create
-          - delete
-          - deletecollection
-          - get
-          - list
-          - patch
-          - update
-          - watch
-        - apiGroups:
           - rbac.authorization.k8s.io
-          resources:
-          - rolebindings
-          - roles
-          verbs:
-          - create
-          - delete
-          - deletecollection
-          - get
-          - list
-          - patch
-          - update
-          - watch
-        - apiGroups:
           - route.openshift.io
-          resources:
-          - routes
-          verbs:
-          - create
-          - delete
-          - deletecollection
-          - get
-          - list
-          - patch
-          - update
-          - watch
-        - apiGroups:
           - build.openshift.io
-          resources:
-          - buildconfigs
-          verbs:
-          - create
-          - delete
-          - deletecollection
-          - get
-          - list
-          - patch
-          - update
-          - watch
-        - apiGroups:
           - image.openshift.io
-          resources:
-          - imagestreams
-          - imagestreamtags
-          verbs:
-          - create
-          - delete
-          - deletecollection
-          - get
-          - list
-          - patch
-          - update
-          - watch
-        - apiGroups:
           - app.kiegroup.org
           resources:
-          - kieapps
-          - kieapps/finalizers
+          - '*'
           verbs:
-          - create
-          - delete
-          - deletecollection
-          - get
-          - list
-          - patch
-          - update
-          - watch
+          - '*'
         - apiGroups:
           - monitoring.coreos.com
           resources:
@@ -278,11 +176,15 @@ spec:
           resources:
           - clusterserviceversions
           verbs:
-          - get
-          - list
-          - patch
+          - '*'
+        - apiGroups:
+          - apps
+          resourceNames:
+          - kie-cloud-operator
+          resources:
+          - deployments/finalizers
+          verbs:
           - update
-          - watch
         serviceAccountName: kie-cloud-operator
     strategy: deployment
   installModes:
