--- a/config/7.6.1/dbs/postgresql.yaml
+++ b/config/7.6.1/dbs/postgresql.yaml
@@ -63,10 +63,7 @@ servers:
             service: "[[.KieName]]-postgresql"
         spec:
           strategy:
-            rollingParams:
-              maxSurge: 100%
-              maxUnavailable: 0
-            type: Rolling
+            type: Recreate
           triggers:
             - type: ImageChange
               imageChangeParams:
