[RHPAM-2431] - Busybox dependency in Kieserver DeploymentConfig
See: https://issues.redhat.com/browse/RHPAM-2431

Signed-off-by: Mauricio Magnani <mmagnani@redhat.com>

--- a/config/7.6.0/dbs/mysql.yaml
+++ b/config/7.6.0/dbs/mysql.yaml
@@ -12,11 +12,12 @@ servers:
               initContainers:
                 - command:
                     [
-                      "sh",
+                      "/bin/bash",
                       "-c",
-                      "until nslookup [[.KieName]]-mysql && nc -vz [[.KieName]]-mysql 3306; do echo waiting for [[.KieName]]-mysql; sleep 2; done;",
+                      ">-
+                        replicas=$(oc get dc [[.KieName]]-mysql -o=jsonpath='{.status.availableReplicas}'); until '[' $replicas -gt 0 ']'; do echo waiting for [[.KieName]]-mysql; replicas=$(oc get dc [[.KieName]]-mysql -o=jsonpath='{.status.availableReplicas}'); sleep 2; done;",
                     ]
-                  image: busybox
+                  image: registry.redhat.io/openshift3/ose-cli:v3.11
                   imagePullPolicy: IfNotPresent
                   name: "[[.KieName]]-mysql-init"
                   terminationMessagePolicy: FallbackToLogsOnError
