--- a/deploy/catalog_resources/redhat/businessautomation.package.yaml
+++ b/deploy/catalog_resources/redhat/businessautomation.package.yaml
@@ -1,4 +1,4 @@
-#! package-manifest: deploy/catalog_resources/redhat/1.4.0/businessautomation-operator.1.4.0.clusterserviceversion.yaml
+#! package-manifest: deploy/catalog_resources/redhat/1.4/businessautomation-operator.1.4.0.clusterserviceversion.yaml
 channels:
 - currentCSV: businessautomation-operator.1.4.0
   name: stable
