--- a/config/7.7.0/common.yaml
+++ b/config/7.7.0/common.yaml
@@ -18,7 +18,7 @@ console:
               from:
                 kind: ImageStreamTag
                 namespace: openshift
-                name: "[[.Console.Image]]:[[.Console.ImageTag]]"
+                name: "[[.Console.Image]]"
           - type: ConfigChange
         replicas: [[.Console.Replicas]]
         selector:
@@ -353,7 +353,7 @@ smartRouter:
               from:
                 kind: ImageStreamTag
                 namespace: "openshift"
-                name: "[[.SmartRouter.Image]]:[[.SmartRouter.ImageTag]]"
+                name: "[[.SmartRouter.Image]]"
           - type: ConfigChange
         replicas: [[.SmartRouter.Replicas]]
         selector:
